--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-/* line 17, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -20,45 +20,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -172,10 +172,9 @@ button:focus {
   font-weight: 700;
   padding: 18px;
   color: #fff;
-  padding: 18px 18px 17px 18px;
 }
 
-/* line 92, ../../scss/main.scss */
+/* line 91, ../../scss/main.scss */
 .signup-input {
   padding: 17px;
   width: 360px;
@@ -183,60 +182,60 @@ button:focus {
   font-size: 20px;
 }
 
-/* line 99, ../../scss/main.scss */
+/* line 98, ../../scss/main.scss */
 .row {
   overflow: hidden;
   *zoom: 1;
   width: 100%;
 }
 
-/* line 104, ../../scss/main.scss */
+/* line 103, ../../scss/main.scss */
 .purple {
   color: #7118b2;
 }
 
-/* line 106, ../../scss/main.scss */
+/* line 105, ../../scss/main.scss */
 .grey-background {
   background: #edf1f2;
   color: #000;
 }
 
-/* line 111, ../../scss/main.scss */
+/* line 110, ../../scss/main.scss */
 .purple-background {
   background: #7118b2;
   color: #fff;
 }
-/* line 115, ../../scss/main.scss */
+/* line 114, ../../scss/main.scss */
 .purple-background a {
   color: #fff;
 }
-/* line 116, ../../scss/main.scss */
+/* line 115, ../../scss/main.scss */
 .purple-background a:hover {
   color: #000;
 }
 
-/* line 119, ../../scss/main.scss */
+/* line 118, ../../scss/main.scss */
 .container {
   max-width: 980px;
   margin: 0 auto;
 }
 
-/* line 124, ../../scss/main.scss */
+/* line 123, ../../scss/main.scss */
 .header-padding {
   padding: 28px;
 }
 
-/* line 128, ../../scss/main.scss */
+/* line 127, ../../scss/main.scss */
 .hero-padding {
   padding: 135px 28px;
 }
 
-/* line 132, ../../scss/main.scss */
+/* line 131, ../../scss/main.scss */
 .base-section-padding {
   padding: 80px;
 }
 
-/* line 134, ../../scss/main.scss */
+/* line 133, ../../scss/main.scss */
 .logo {
   text-indent: -9999px;
   background-image: url("/img/wesual.png");
@@ -249,16 +248,16 @@ button:focus {
 /****************************************
 * Index 
 ****************************************/
-/* line 148, ../../scss/main.scss */
+/* line 147, ../../scss/main.scss */
 .menu li {
   display: inline-block;
   margin-left: 15px;
 }
-/* line 152, ../../scss/main.scss */
+/* line 151, ../../scss/main.scss */
 .menu li a {
   position: relative;
 }
-/* line 154, ../../scss/main.scss */
+/* line 153, ../../scss/main.scss */
 .menu li a:after {
   -webkit-transition: all 150ms ease;
   -moz-transition: all 150ms ease;
@@ -279,7 +278,7 @@ button:focus {
   background: #7118b2;
   content: '';
 }
-/* line 167, ../../scss/main.scss */
+/* line 166, ../../scss/main.scss */
 .menu li a:hover:after {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=25);
   opacity: 0.25;
@@ -290,26 +289,17 @@ button:focus {
   transform: translate3d(0, 2px, 0);
 }
 
-/* line 176, ../../scss/main.scss */
+/* line 175, ../../scss/main.scss */
 .relative {
   position: relative;
 }
 
-/* line 180, ../../scss/main.scss */
-.hero {
-  height: 800px;
-}
-/* line 183, ../../scss/main.scss */
-.hero .container {
-  height: 100%;
-}
-
-/* line 186, ../../scss/main.scss */
+/* line 179, ../../scss/main.scss */
 .hero-container {
   width: 650px;
 }
 
-/* line 190, ../../scss/main.scss */
+/* line 183, ../../scss/main.scss */
 .hero-tv {
   position: absolute;
   left: 690px;
@@ -317,24 +307,24 @@ button:focus {
   width: 676px;
 }
 
-/* line 197, ../../scss/main.scss */
+/* line 190, ../../scss/main.scss */
 .features {
   text-align: center;
 }
 
-/* line 201, ../../scss/main.scss */
+/* line 194, ../../scss/main.scss */
 .feature {
   display: inline-block;
   text-align: center;
   width: 33%;
   margin-top: 40px;
 }
-/* line 207, ../../scss/main.scss */
+/* line 200, ../../scss/main.scss */
 .feature strong {
   margin-bottom: 10px;
 }
 
-/* line 210, ../../scss/main.scss */
+/* line 203, ../../scss/main.scss */
 .feature-bubble {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -349,7 +339,7 @@ button:focus {
 /****************************************
 * Misc.
 ****************************************/
-/* line 221, ../../scss/main.scss */
+/* line 214, ../../scss/main.scss */
 #mfPreviewBar, #mfPreviewBarShow {
   display: none !important;
 }
