--- a/scss/main.scss
+++ b/scss/main.scss
@@ -248,12 +248,8 @@ button:focus { outline: none; }
 	padding: 80px 0 80px;
 
 	@media screen and (min-width: $break-small) {
-		padding: 100px 0 130px;
+		padding: 80px 0 125px;
 	}
-
-  &.telegraphic {
-    padding-bottom: 80px;
-  }
 }
 
 .logo {
@@ -603,7 +599,14 @@ button:focus { outline: none; }
 }
 
 .telegraphic {
-  h2 { margin-bottom: 50px; }
+  padding-bottom: 95px;
+  background-image: url('../img/telegraphic-bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  h2 { margin-bottom: 20px; }
+
+  .container { margin: 0 auto 50px; }
 }
 
 footer.base-section-padding {
@@ -629,7 +632,12 @@ footer.base-section-padding {
 }
 
 .slider {
-	width: 100%;
+  height: 530px;
+  width: 850px;
+  margin: 0 auto;
+  background-image: url('../img/tv-new.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .slider-viewport {
@@ -638,38 +646,37 @@ footer.base-section-padding {
   height: 100%;
 
   li {
-    @include opacity(0);
-    @include transform(translate3d(0, 52.5px, 0) rotateX(40deg) scale(0.825));
-    @include transform-origin(50%, 100%);
     position: absolute;
+    width: 737px;
     z-index: 1;
-    top: 0;
-    left: 0;
+    top: 52px;
+    left: 52px;
+    overflow: hidden;
 
     img {
+      @include transition(all 2000ms ease);
+      @include opacity(0);
+      @include transform-origin(50%, 100%);
       display: block;
       width: 100%;
     }
 
-    &.is-next {
+    &.is-next img {
       @include transition(all 1000ms ease);
       @include opacity(1);
-      @include transform(translate3d(0, 0, 0) rotateX(0deg) scale(1));
       @include transition-delay(275ms);
     }
 
-    &.active {
+    &.active img {
       @include opacity(1);
-      @include transform(translate3d(0, 0, 0) rotateX(0deg) scale(1));
       position: relative;
       z-index: 2;
       float: left;
       cursor: pointer;
     }
 
-    &.remove {
+    &.remove img {
       @include transition(all 600ms ease);
-      @include transform(translate3d(0, 30px, 0));
       @include opacity(0);
     }
   }
@@ -686,15 +693,12 @@ footer.base-section-padding {
 		display: inline-block;
 		width: 15px;
 		height: 15px;
-    margin: 30px 6px 0 0;
+    margin: 20px 6px 0 0;
 		border: 1px solid #fff;
     cursor: pointer;
     overflow: hidden;
 
-    &.active {
-      @include transform(scale(1.1));
-      background: #fff;
-    }
+    &.active { background: #fff; }
 	}
 }
 
