--- a/scss/main.scss
+++ b/scss/main.scss
@@ -188,6 +188,7 @@ button:focus { outline: none; }
 	margin-bottom: 10px;
 
 	@media screen and (min-width: $break-small) {
+    width: 360px;
 		margin-bottom: 0;
 		margin-right: 10px;
 	}
@@ -255,16 +256,16 @@ button:focus { outline: none; }
 	padding: 30px 28px 230px;
 
 	@media screen and (min-width: $break-small) {
-		padding: 30px 28px 430px;
+		padding: 30px 28px 460px;
 	}
 }
 
 .base-section-padding {
 	text-align: center;
-	padding: 80px 0 80px;
+	padding: 90px 0 80px;
 
 	@media screen and (min-width: $break-small) {
-		padding: 80px 0 125px;
+		padding: 90px 0 125px;
 	}
 }
 
@@ -529,6 +530,7 @@ button:focus { outline: none; }
 
 	p {
 		max-width: 570px;
+    margin-bottom: 35px;
 	}
 }
 
@@ -653,7 +655,7 @@ footer.base-section-padding {
   height: 530px;
   width: 850px;
   margin: 0 auto;
-  background-image: url('../img/tv-new.png');
+  background-image: url('../img/tv.png');
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -669,7 +671,6 @@ footer.base-section-padding {
 }
 
 .slider-viewport {
-  @include perspective(1500);
   position: relative;
   height: 100%;
 
@@ -683,11 +684,12 @@ footer.base-section-padding {
     cursor: pointer;
 
     img {
-      @include transition(all 2000ms ease);
+      @include transition(all 1000ms ease);
       @include opacity(0);
       @include transform-origin(50%, 100%);
       display: block;
       width: 100%;
+      pointer-events: none;
     }
 
     &.active img {
@@ -698,9 +700,7 @@ footer.base-section-padding {
     }
 
     &.remove img {
-      @include transition(all 600ms ease);
-      @include opacity(0);
-      @include transition-delay(2000ms);
+      z-index: 1;
     }
   }
 }
